<resources>
    <string name="app_name">Delta</string>
    <string name="splash_name">delta</string>
    <string name="splash_logo_description">Logotipo do banco Delta na cor roxa</string>
    <string name="main_background_description">Mulher jovem sorrindo, de pele clara e cabelo escuro, olhando para um celular que segura com as duas mãos. Ela está em um ambiente urbano noturno ou com luzes baixas. A imagem tem sobreposições digitais e gráficos de interface futuristas e translúcidos, adicionando um tema tecnológico.</string>
    <string name="main_logo_description">Logotipo do banco Delta na cor laranja</string>
    <string name="main_delta_name">delta</string>
    <string name="main_description_01">O delta tem benefícios</string>
    <string name="main_description_02">e praticidades</string>
    <string name="main_description_03">para você fazer</string>
    <string name="main_description_04">o que importa</string>
    <string name="main_button_login">Já tenho conta</string>
    <string name="main_button_register">Criar Conta</string>
    <string name="home_client_initial">U</string>
    <string name="home_hello">Olá,</string>
    <string name="home_client_name">Usuário</string>
    <string name="home_balance_description">Meu saldo: </string>
    <string name="home_balance_text">R$ 0,00</string>
    <string name="home_card_pix_description">Pix ou Transferir</string>
    <string name="home_card_pay_description">Pagar</string>
    <string name="home_card_description">Cartões</string>
    <string name="home_card_investiments">Investimentos</string>
    <string name="home_card_savings">Poupança</string>
    <string name="home_card_pix_keys">Chaves Pix</string>
    <string name="home_card_loan">Empréstimos</string>
    <string name="home_card_consortium">Consórcios</string>
    <string name="home_card_receipts">Comprovantes</string>
    <string name="home_card_phone_top_up">Recarga de celular</string>
    <string name="home_card_renegotiation">Renegociação</string>
    <string name="register_title">Criar Conta</string>
    <string name="register_text_title">O primeiro passo para abrir sua conta \né informar uns dados ;)</string>
    <string name="register_name">Nome</string>
    <string name="register_cpf">CPF</string>
    <string name="register_birth">Data de Nascimento</string>
    <string name="register_email">E-mail</string>
    <string name="register_confirm_email">Confirmar E-mail</string>
    <string name="register_phone">Celular</string>
    <string name="register_agree_term">Li e estou de acordo com o </string>
    <string name="register_privacy_policy">Termo de Uso e Política de Privacidade</string>
    <string name="button_next">Continuar</string>
    <string name="register_term_title">Os Termos e a política de Privacidade \n do WhatsApp serão atualizados.</string>
    <string name="register_term_subtitle_one">Atualizações importantes</string>
    <string name="register_term_subtitle_two">Lei Geral de Proteção de Dados.</string>
    <string name="register_term_text_paragraph">Em caso de incidentes de segurança que possa gerar risco ou dano relevante para você ou qualquer um de nossos usuários/clientes, comunicaremos aos afetados e a Autoridade Nacional de Proteção de Dados sobre o ocorrido, em consonância com as disposições da Lei Geral de Proteção de Dados.</string>
    <string name="register_term_text_paragraph_one">I – Quaisquer consequências decorrentes da negligência, imprudência ou imperícia dos usuários em relação a seus dados individuais. Garantimos e nos responsabilizamos apenas pela segurança dos processos de tratamento de dados e do cumprimento das finalidades descritas no presente instrumento. Destacamos que a responsabilidade em relação à confidencialidade dos dados de acesso é do usuário.</string>
    <string name="register_term_text_paragraph_two">II – Ações maliciosas
        <font color="#0451FF">de terceiros, como ataque</font>
        de hackers, exceto se comprovada conduta culposa ou deliberada da (nome empresarial simplificado).
        Destacamos que em caso de incidentes de segurança que possam gerar risco ou dano relevante para você ou qualquer um de nossos usuários/clientes, comunicaremos aos afetados e a Autoridade Nacional de Proteção de Dados sobre o ocorrido e cumpriremos as providências necessárias.
    </string>
    <string name="register_term_text_paragraph_three">
        III – Inveracidade das informações inseridas pelo usuário/cliente nos registros necessários para a utilização dos serviços da (
        <font color="#0451FF">nome empresarial simplificado</font>
        ); quaisquer consequências.
    </string>
    <string name="register_term_button">Concordar</string>
    <string name="address_title">Endereço Pessoal</string>
    <string name="address_text_title">O segundo passo para abrir sua conta\n é informar dados do seu endereço ;)</string>
    <string name="address_cep">CEP</string>
    <string name="address_text">Endereço</string>
    <string name="address_number">Nº</string>
    <string name="address_complement">Complemento</string>
    <string name="address_district">Bairro</string>
    <string name="address_city">Cidade</string>
    <string name="address_state">Estado</string>
    <string name="password_title">Senha do App</string>
    <string name="password_text_title"> Escolha uma senha de 6 números \n para entrar no app. Daí você começa\n o cadastro e se precisar, pode \n parar e voltar depois.</string>
    <string name="password_subtitle">Evite usar sequências, repetições e \n números de documentos ou datas</string>
    <string name="password_text">Senha</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="password_title_account"> Agora insira uma senha \n de 4 dígitos para as suas \n movimentações bancárias</string>
    <string name="password_account">Senha de Transações</string>
    <string name="password_confirm_account">Confirme a senha de Transações</string>
    <string name="password_account_subtitle">Evite usar a mesma senha \n do app para ter mais \n segurança</string>
    <string name="back_arrow_description">Seta de voltar</string>
    <string name="login_logo_description">Logotipo do banco Delta na cor laranja</string>
    <string name="login_header">Entrar</string>
    <string name="login_cpf">CPF</string>
    <string name="login_cpf_input">Digite seu CPF</string>
    <string name="login_password">Senha</string>
    <string name="login_password_input">Digite sua senha</string>
    <string name="login_forgot_password">Esqueci a senha</string>
    <string name="login_button_login">Entrar</string>
    <string name="login_footer">©2025 Delta</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_chat">Chat</string>
    <string name="bottom_nav_extract">Extrato</string>
    <string name="bottom_nav_profile">Perfil</string>
    <string name="forgot_password_header">Esqueci a Senha</string>
    <string name="forgot_password_title">Esqueceu a Senha?</string>
    <string name="forgot_password_description">Informe seu email e enviaremos para você as instruções para redefinir sua senha.</string>
    <string name="forgot_password_input">E-mail</string>
    <string name="forgot_password_button">Continuar </string>
    <string name="email_verification_header">Verifique seu E-mail</string>
    <string name="email_verification_title">Verifique seu E-mail</string>
    <string name="email_verification_description">Acabamos de enviar um link para o seu E-mail registrado</string>
    <string name="email_verification_check_text_timer">01:00</string>
    <string name="email_verification_bottom_01">Não recebeu um código?</string>
    <string name="email_verification_bottom_02">Reenviar</string>
    <string name="email_verification_button">Continuar</string>
    <string name="reset_password_header">Redefina sua Senha</string>
    <string name="reset_password_title">Redefina sua Senha</string>
    <string name="reset_password_description">Preencha os campos abaixo</string>
    <string name="reset_password_input_01">Nova Senha</string>
    <string name="reset_password_input_02">Confirme sua  Senha</string>
    <string name="reset_password_button">Redefinir</string>
    <string name="password_reseted_header">Senha Redefinida</string>
    <string name="password_reseted_title">Redefinido com sucesso</string>
    <string name="password_reseted_description">Agora você pode fazer login na sua conta</string>
    <string name="password_reseted_button">Fazer Login</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="passwords_do_not_match">As senhas não conferem</string>
    <string name="weak_password">Senha fraca, tente uma mais segura</string>
    <string name="register_success">Senha cadastrada com sucesso!</string>
    <string name="error_email_missing">Email ausente</string>
    <string name="error_email_exists">Este e-mail já está cadastrado. Tente outro ou faça login.</string>
    <string name="error_cpf_exists">Este CPF já está cadastrado. Tente outro ou faça login.</string>
    <string name="error_invalid_name">Nome incompleto</string>
    <string name="error_invalid_cpf">CPF Inválido</string>
    <string name="error_invalid_birth">Data de nascimento inválida</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_email_not_match">Emails não conferem</string>
    <string name="error_invalid_phone">Número de telefone inválido</string>
    <string name="error_invalid_term">Aceitar os termos</string>
    <string name="transfer_confirmation_title">Transferência Concluída</string>
    <string name="transfer_confirmation_description_01">Sua transferência foi concluída</string>
    <string name="transfer_confirmation_amount">R$ 10.000,00</string>
    <string name="transfer_confirmation_for">Para</string>
    <string name="transfer_confirmation_for_name">Anthony Edward Stark</string>
    <string name="transfer_confirmation_institution">Instituição</string>
    <string name="transfer_confirmation_institution_name">Banco Bradesco S.A</string>
    <string name="transfer_confirmation_agency">Agência</string>
    <string name="transfer_confirmation_agency_value">0014</string>
    <string name="transfer_confirmation_account">Conta</string>
    <string name="transfer_confirmation_account_value">222222-2</string>
    <string name="transfer_confirmation_type_account">Conta Corrente</string>
    <string name="transfer_confirmation_when_date">Agora</string>
    <string name="transfer_confirmation_when">Quando</string>
    <string name="transfer_confirmation_button">Abrir comprovante</string>
    <string name="close_icon_description">Icone de x para fechar a tela e retornar</string>
    <string name="extract_date_today">Hoje</string>
    <string name="extract_entry_pix">Entrada Pix</string>
    <string name="extract_entry_pix_description">Pix Recebido de Bill Gates</string>
    <string name="extract_entry_pix_value">R$ 1.000,00</string>
    <string name="payment_transfers_title">Transferências</string>
    <string name="transfers_data_subtitle">Informe os dados para \n a Transferência</string>
    <string name="transfers_hint_input">Banco</string>
    <string name="transfers_hint_agency">Agência</string>
    <string name="transfers_hint_account">Conta</string>
    <string name="transfers_hint_account_type">Qual é o seu tipo de conta</string>
    <string name="transfers_radio_individual">Pessoa Física</string>
    <string name="transfers_radio_company">Pessoa Jurídica</string>
    <string name="transfers_description_agency">Digite o número da sua agência</string>
    <string name="transfers_description_account">Digite o número da sua conta</string>
    <string name="transfers_description_individual">Pessoa Física</string>
    <string name="transfers_description_company">Pessoa Jurídica</string>
</resources>