<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="104dp"
    android:background="@drawable/bg_extract_recycler_view"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_secundary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/extract_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extract_date_today"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/extract_Transaction_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:textSize="10sp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        tools:ignore="RtlSymmetry"
        tools:text="@string/extract_entry_pix" />
<!--        android:background="@drawable/bg_recycler_view"-->

    <TextView
        android:id="@+id/extract_Transaction_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extract_Transaction_View"
        tools:ignore="RtlSymmetry"
        tools:text="@string/extract_entry_pix_description" />

    <TextView
        android:id="@+id/extract_Transaction_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:fontFamily="@font/font_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extract_Transaction_View"
        tools:ignore="RtlSymmetry"
        tools:text="@string/extract_entry_pix_value" />



</androidx.constraintlayout.widget.ConstraintLayout>